--- a/plugin.yaml
+++ b/plugin.yaml
@@ -3,8 +3,8 @@ plugins:
   exec:
     executor: host_agent
     package_name: cloudify-execution-plugin
-    package_version: '0.1.dev0'
-    source: https://github.com/EarthmanT/cloudify-execution-plugin/archive/bd41e6b718922b4516a06da26ef08d7ee7f8f944.zip
+    package_version: '0.1'
+    source: https://github.com/EarthmanT/cloudify-execution-plugin/archive/0.1.zip
 
 data_types:
 
