--- a/examples/blueprint.yaml
+++ b/examples/blueprint.yaml
@@ -16,6 +16,8 @@ inputs:
   resource_list:
     # For Ansible.
     default:
+      # - exec
+      # - helloworld.yml
       - hosts.tmp
 
 node_templates:
@@ -24,14 +26,16 @@ node_templates:
     type: cloudify.nodes.Execution
     properties:
       resource_config:
-        resource_dir: resources/ansible.zip
+        resource_dir: resources/ansible
         resource_list: { get_input: resource_list }
         template_variables:
           host_ip: { get_input: host_ip }
     # interfaces:
     #   cloudify.interfaces.lifecycle:
     #     create:
-    #       executor: central_deployment_agent
+    #       inputs:
+    #         resource_config: { get_property: [ SELF, resource_config ] }
+    #         file_to_source: exec
     # relationships:
     # - type: cloudify.relationships.contained_in
     #   target: host
