--- a/central-deployment-plugin.yaml
+++ b/central-deployment-plugin.yaml
@@ -1,8 +1,7 @@
 plugins:
 
   exec:
-    executor: host_agent
-    source: https://github.com/cloudify-incubator/cloudify-execution-plugin/archive/0.4.0.zip
+    executor: central_deployment_agent
     package_name: cloudify-execution-plugin
     package_version: '0.4.0'
 
